# quickswitch

./: .gitignore  Cargo.toml  README.md  quickswitch.fish  quickswitch.sh  test.txt
.github/workflows/: ci.yml  release.yml
src/: app.rs  app_state.rs  config.rs  events.rs  filesystem.rs  lib.rs  logging.rs  main.rs  models.rs  preview_content.rs  terminal.rs  tui.rs  ui.rs  utils.rs
src/core/: events.rs  input_dispatcher.rs  layout.rs  mod.rs
src/handlers/: mod.rs  navigation.rs
src/modes/: common.rs  history.rs  mod.rs  normal.rs  preview.rs  search.rs
src/modes/history/: data_provider.rs  handler.rs  mod.rs
src/modes/history/renderers/: help.rs  history_list.rs  mod.rs
src/modes/normal/: data_provider.rs  handler.rs  mod.rs
src/modes/normal/renderers/: file_list.rs  help.rs  mod.rs
src/modes/search/: handler.rs  mod.rs
src/modes/search/renderers/: help.rs  mod.rs
src/modes/shared/: mod.rs
src/modes/shared/renderers/: mod.rs  preview.rs
src/renderers/: file_list.rs  help.rs  history_list.rs  mod.rs  preview.rs
src/services/: action_dispatcher.rs  data_provider.rs  filesystem.rs  global_preview_state.rs  image_preview.rs  mod.rs  preview_generator.rs  preview_manager.rs  state.rs
src/services/preview/: directory_generator.rs  image_generator.rs  mod.rs  pdf_generator.rs  preview_content.rs  preview_generator.rs  text_generator.rs
tests/: async_integration_test.rs
