[package]
name = "quickswitch"
version = "0.1.3"
edition = "2024"
description = "A terminal-based tool for quickly switching between directories and files."
authors = ["Debin <luodeb@outlook.com>"]
license = "Apache-2.0"
repository = "https://github.com/luodeb/quickswitch.git"
documentation = "https://docs.rs/quickswitch"

[dependencies]
ratatui = { version = "0.29.0", features = ["crossterm"] }
crossterm = "0.29.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
